-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.2.12
-
Fix Version/s: 10.2.13
-
Component/s: Storage Engine - InnoDB, wsrep
-
Labels:
-
Environment:Debian 9 fresh install
mariadb from debian repos
galera from debian repos
-
Sprint:10.2.13
-
Epic/Theme:
Try to setup galera cluster from standalone mariadb server that has a few databases.
From existing mariadb server use /var/lib/mysql as is
on stock /etc/mysql/my.cnf
add
[galera]
- Mandatory settings
wsrep_on=ON
wsrep_provider=/usr/lib/galera/libgalera_smm.so
wsrep_cluster_name="tam_cluster"
wsrep_cluster_address="gcomm://ip1, ip2, ip5"
wsrep_node_address="ip5"
wsrep_node_name="node_5"
wsrep_sst_method=rsync
binlog_format=row
default_storage_engine=InnoDB
innodb_autoinc_lock_mode=2
run: galera_new_cluster
result: mysqld crashes