MDEV-14875: galera_new_cluster crashes mysqld when existing server contains databases

Fortify wsrep_hton so that wsrep calls are not done to NULL-pointers.